# thermodynamic-dfn

./: .copier-answers.yml  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md
src/thermodynamic_dfn/: __init__.py  entry_point.py
tests/generated_project_tests/: test_entry_points.py
tests/user_tests/: test_package.py
